<resources>
    <string name="app_name">中原A+</string>
    <string name="login_staff_account_hint">員工編號</string>
    <string name="login_staff_password_hint">密碼</string>
    <string name="login_login_btn">登入</string>
    <string name="login_versioncode_btn">v 1.1.3</string>
    <string name="property">樓盤</string>
    <string name="favorite">收藏</string>
    <string name="my">我的</string>
    <string name="tran">成交</string>
    <string name="fragment_search">排序</string>
    <string name="fragment_reset">重設</string>
    <string name="fragment_hints">搜尋屋苑</string>
    <string name="search_keyword">搜尋關鍵字</string>
    <string name="fragment_status">狀態</string>
    <string name="fragment_price">價格</string>
    <string name="area">區域</string>
    <string name="fragment_more">更多</string>
    <string name="fragment_mine">我的帳戶</string>
    <string name="fragment_mine_installation">裝置管理</string>
    <string name="fragment_mine_staff">員工管理</string>
    <string name="fragment_mine_about">關於 A+</string>
    <string name="fragment_mine_question">問題回報</string>
    <string name="fragment_mine_logout">登出</string>
    <string name="feedback_limit">最多輸入200字</string>
    <string name="feedback_put_limit">最多輸入140字</string>
    <string name="feedback_hint">請輸入...</string>
    <string name="feedback_null">跟進内容不能爲空</string>
    <string name="opendate">最後跟進日期</string>
    <string name="dialog_sort">預設排序</string>
    <string name="sort">排序</string>
    <string name="dialog_price">售價</string>
    <string name="sale_price">售價</string>
    <string name="dialog_rent">租價</string>
    <string name="size_price">呎價</string>
    <string name="rent_price">租價</string>
    <string name="acreage">面積</string>
    <string name="direction">座向</string>
    <string name="interval">間隔</string>
    <string name="laber">標籤</string>
    <string name="facility">設施</string>
    <string name="other">其他</string>
    <string name="dialog_saleableArea">實用面積</string>
    <string name="dialog_coveredArea">建築面積</string>
    <string name="ssd">SSD</string>
    <string name="dialog_status_ALL">不限</string>
    <string name="dialog_status_N">N (Active)</string>
    <string name="dialog_status_WT">WT (With Tenancy)</string>
    <string name="dialog_status_P">P (Pending)</string>
    <string name="dialog_status_TP">TP (Tenancy Pending)</string>
    <string name="dialog_status_G">G (已成交)</string>
    <string name="dialog_status_S">S (Search)</string>
    <string name="dialog_status_confirm">確 定</string>
    <string name="dialog_price_unlimit">不限</string>
    <string name="dialog_price_400">0 - 400萬</string>
    <string name="dialog_price_600">400萬 - 600萬</string>
    <string name="dialog_price_800">600萬 - 800萬</string>
    <string name="dialog_price_1000">800萬 - 1,000萬</string>
    <string name="dialog_price_2000">1,000萬 - 2,000萬</string>
    <string name="dialog_price_3000">2,000萬 - 3,000萬</string>
    <string name="dialog_price_3000up">3,000萬以上</string>
    <string name="dialog_rent_unlimit">不限</string>
    <string name="dialog_rent_10000">0 - 10,000</string>
    <string name="dialog_rent_15000">10,000 - 15,000</string>
    <string name="dialog_rent_20000">15,000 - 20,000</string>
    <string name="dialog_rent_40000">20,000 - 40,000</string>
    <string name="dialog_rent_60000">40,000 - 60,000</string>
    <string name="dialog_rent_100000">60,000 - 100,000</string>
    <string name="dialog_rent_100000up">100,000以上</string>
    <string name="dialog_hint_title">提示</string>
    <string name="dialog_hint_confirm">確定</string>
    <string name="dialog_opendate_opendate">開盤日期</string>
    <string name="dialog_opendate_last_modify">最後修改日期</string>
    <string name="dialog_opendate_last_follow">最後跟進日期</string>
    <string name="dialog_opendate_last_changeprice">最後改價日期</string>
    <string name="dialog_opendate_entrust_begin">委託書開始日</string>
    <string name="dialog_opendate_entrust_end">委託書到期日</string>
    <string name="dialog_opendate_estimate_date">估計日期</string>
    <string name="dialog_opendate_change_date">改盤日期</string>
    <string name="search">搜尋</string>
    <string name="confirm">確定</string>
    <string name="dialog_confirm_cancl">取消</string>
    <string name="dialog_confirm_confirm">確定</string>
    <string name="cutline">CUTLINEE</string>
    <string name="line_busy">LINE BUSY</string>
    <string name="nolistener">無人接聼</string>
    <string name="voicemailmessage">留言信箱</string>
    <string name="wrongnumb">WRONG NUMBER</string>
    <string name="dialog_tips_back">確定返回？</string>
    <string name="dialog_tips_put">確定提交？</string>
    <string name="dialog_tips_remove_favorite">移除收藏</string>
    <string name="dialog_tips_remove">移除</string>
    <string name="loading_more">加載更多</string>
    <string name="pull_down_loading">下拉更新數據</string>
    <string name="pull_down_release">放手即重新載入</string>
    <string name="updateing">正在更新</string>
    <string name="update_finish">更新完成</string>
    <string name="pull_up_loading">上拉更新數據</string>
    <string name="search_floot">樓層</string>
    <string name="search_units">單位</string>
    <string name="client">樓主:</string>
    <string name="detail_no_owner">暫無樓主</string>
    <string name="house_umber">樓盤編號</string>
    <string name="to">至</string>
    <string name="from">由</string>
    <string name="feedback_save">儲存</string>
    <string name="detail_attention">關注事項</string>
    <string name="clear">清除</string>
    <string name="feedback_put">提交</string>
    <string name="about_app">關於A+</string>
    <string name="app_version">軟件版本</string>
    <string name="machine_version">機身型號</string>
    <string name="sys_type">作業系統</string>
    <string name="sys_version">系統版本</string>
    <string name="about_centa_tip"> \@2017-2018 中原地產代理有限公司 版權所有</string>
    <string name="app_use_clause">使用條款</string>
    <string name="dialog_tips_permission_no_houselist">你沒有查看「樓盤列表」權限，如有查詢請與系統管理員聯絡</string>
    <string name="dialog_tips_permission_follow_no_look">你沒有查看跟進權限，如有查詢請與系統管理員聯絡</string>
    <string name="dialog_tips_permission_follow_no_add">你沒有添加跟進權限，如有查詢請與系統管理員聯絡</string>
    <string name="dialog_tips_permission_clientinfo_no_look">你沒有查看「業主資料」權限，如有查詢請與系統管理員聯絡</string>
    <string name="dialog_tips_permission_clientinfo_no">當前沒有業主信息</string>
    <string name="dialog_tips_permission_follow_no">沒有找到相關數據</string>
    <string name="dialog_tips_input_acc_pass">請輸入帳號或密碼</string>
    <string name="dialog_tips_detail_call">是否致電業主</string>
    <string name="dialog_tips_network_fail">請稍後再試</string>
    <string name="dialog_tips_time_out">長時間沒有使用A+，請重新登入。</string>
    <string name="dialog_tips_root">由於偵測到您的流動裝置已進行「越獄 (Jailbreak)或Root機」，可能變得不安全。基於安全理由，您將無法使用中原A+。</string>
    <string name="dialog_tips_update_must">A+版本已升級，你必須更新至最新版本才能繼續使用。</string>
    <string name="dialog_tips_update">A+版本已升級，請更新至最新版本。</string>
    <string name="dialog_tips_close">再按一次退出「中原A+」</string>
    <string name="dialog_tips_btn_close">關閉</string>
    <string name="dialog_tips_btn_update">更新</string>
    <string name="dialog_tips_put_success">提交成功</string>
    <string name="dialog_tips_put_fail">提交失敗</string>
    <string name="dialog_tips_user_no_permission">請在手機設置中開啟所有存取權限予中原A+，才能進入程式。</string>
    <string name="keyhouse">鎖匙號</string>
    <string name="dialog_tips_content_null">内容不能爲空</string>
    <string name="dialog_tips_title_update">軟件更新</string>
    <string name="key">鎖匙</string>
    <string name="more_title_moresearch">更多篩選</string>
    <string name="house_no_find">沒有找到相關數據</string>
    <string name="download">下载</string>
    <string name="network_unenable">網絡連接出現問題，請重新再試</string>
    <string name="loading">加載中…</string>
    <string name="load_error">网络出错</string>
    <string name="hk_loading">載入中...</string>
    <string name="try_later">請稍後再試</string>
    <string name="no_more_data">已無更多數據</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail_follow_detail">查看全部</string>
    <string name="detail_follow_add">新增跟進</string>
    <string name="detail_follow">跟進</string>
    <string name="detail_data_information">數據資料</string>
    <string name="record_price">叫價記錄</string>
    <string name="record_transaction">成交記錄</string>
    <string name="record_price_add_reduce">升跌(%)</string>
    <string name="record_price_sale">售價（萬）</string>
    <string name="record_price_rent">租價（元）</string>
    <string name="date">日期</string>
    <string name="record_price_changer">議價人</string>
    <string name="record_transaction_manager">成交經理人</string>
    <string name="record_transaction_rentdate_to">租期至</string>
    <string name="detail_phone_call">直銷</string>
    <string name="record_transaction_proxy">代理</string>
    <string name="record_transaction_price">成交價</string>
    <string name="record_transaction_appointment">臨約日期</string>
    <string name="record_transaction_finish">完成日期</string>
    <string name="record_transaction_official">正約日期</string>
    <string name="record_transaction_rentdate">租約日期</string>
    <string name="record_transaction_bargain">成交日期</string>
    <string name="record_transaction_create_date">建立日期</string>
    <string name="date_scope">日期範圍</string>
    <string name="daybook">Daybook</string>
    <string name="real">實</string>
    <string name="build">建</string>
    <string name="ruler">呎</string>
    <string name="sale">出售</string>
    <string name="rent">出租</string>
    <string name="house">屋苑</string>
    <string name="option">條件</string>
    <string name="owner_info">業主資料</string>
    <string name="remark">備註</string>
    <string name="direct_celling">直銷：</string>
    <string name="can_not">不可以</string>
    <string name="see_all">查看全部</string>
    <string name="start_date">開始日期</string>
    <string name="end_state">結束日期</string>
    <string name="keywork">關鍵字</string>
    <string name="please_select">請選擇</string>
    <string name="cancel">取消</string>
    <string name="basicinfo">基本資料</string>
    <string name="transact_30">近30天屋苑成交</string>
    <string name="centa_percent">中原佔</string>
    <string name="phone_percent">有電話</string>
    <string name="owner">業主</string>
    <string name="market_transact">市場成交</string>
    <string name="trans_record">成交記錄</string>
    <string name="no_data">暫無相關記錄</string>
    <string name="date_interval">日期範圍</string>
    <string name="floot_and_unit">樓層及單位</string>
    <string name="user_design">自訂搜尋</string>
    <string name="search_history">搜索記錄</string>
    <string name="floot_tips">10-15 或 18,24</string>
    <string name="unit_tips">A-C 或 A,E</string>
    <string name="save_option">保存條件</string>
    <string name="statu_n">N (Active)</string>
    <string name="statu_wt">WT (With Tenancy)</string>
    <string name="statu_p">P (Pending)</string>
    <string name="statu_tp">TP (Tenancy Pending)</string>
    <string name="statu_g">G (已成交)</string>
    <string name="statu_s">S (Search)</string>
    <string name="statu">狀態</string>
    <string name="filtrate">篩選</string>
    <string name="phone">電話</string>
    <string name="statu_change">狀態變更</string>
    <string name="finish_year">落成年份</string>
    <string name="year">年份</string>
    <string name="please_select_year">請選擇年份</string>
    <string name="select_date_interval">選擇日期範圍</string>
    <string name="undate">不限日期</string>
    <string name="unknow">未知</string>
    <string name="car_place">車位</string>
    <string name="connect_green_price">連綠表價</string>
    <string name="green_price">綠表價</string>
    <string name="exclusive">獨家</string>
    <string name="hotlist">HOTLIST</string>
    <string name="no_ssd">無SSD</string>
    <string name="pending">貨尾</string>
    <string name="power_of_attorney">委託書</string>
    <string name="o_property">O盤</string>
    <string name="unconfirm_tran">未確認成交</string>
    <string name="price_400">$400萬以下</string>
    <string name="price_600">$400萬 - $600萬</string>
    <string name="current_search_option">目前搜尋條件</string>
    <string name="add_search_option">加入至自訂搜尋條件</string>
    <string name="address">地址</string>
    <string name="keyword_search">關鍵字</string>
</resources>