<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.centanet.hk.aplus.Widgets.TitleBar
        android:id="@+id/feedback_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titlebarText="@string/fragment_mine_question"
        app:titlebarRighttext="@string/feedback_put"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|right"
            android:padding="6dp"
            android:text="@string/feedback_put_limit"
            android:textColor="#AAA6A4"
            android:textSize="@dimen/themeSizesmall" />

        <EditText
            android:id="@+id/feedback_edit_record"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_gravity="center|left|top"
            android:background="@null"
            android:gravity="center|top|left"
            android:hint="@string/feedback_hint"
            android:padding="10dp"
            android:textSize="@dimen/themeSize" />

    </LinearLayout>

</LinearLayout>