<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_opendate_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_top_left_right_circle"
    android:gravity="top"
    android:orientation="vertical"

    android:visibility="visible">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/dialog_opendate_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="18dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/date"
                    android:textColor="@android:color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_close" />
            </RelativeLayout>

            <RadioButton
                android:id="@+id/dialog_opendate_rb_default"
                style="@style/dialog_opendata_item_style"
                android:drawableLeft="@drawable/selector_checkbox_circle"
                android:text="@string/dialog_opendate_opendate" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="35dp"
                android:background="#EFEFEF" />

            <RadioButton
                android:id="@+id/dialog_opendate_rb_modification_last"
                style="@style/dialog_opendata_item_style"
                android:text="@string/dialog_opendate_last_modify" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="35dp"
                android:background="#EFEFEF" />

            <RadioButton
                android:id="@+id/dialog_opendate_rb_follow"
                style="@style/dialog_opendata_item_style"
                android:text="@string/dialog_opendate_last_follow" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="35dp"
                android:background="#EFEFEF" />

            <RadioButton
                android:id="@+id/dialog_opendate_rb_price"
                style="@style/dialog_opendata_item_style"
                android:text="@string/dialog_opendate_last_changeprice" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="35dp"
                android:background="#EFEFEF" />

            <RadioButton
                android:id="@+id/dialog_opendate_rb_entrust_start"
                style="@style/dialog_opendata_item_style"
                android:text="@string/dialog_opendate_entrust_begin" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="35dp"
                android:background="#EFEFEF" />

            <RadioButton
                android:id="@+id/dialog_opendate_rb_entrust_end"
                style="@style/dialog_opendata_item_style"
                android:text="@string/dialog_opendate_entrust_end" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="35dp"
                android:background="#EFEFEF" />

            <RadioButton
                android:id="@+id/dialog_opendate_rb_anticipate"
                style="@style/dialog_opendata_item_style"
                android:text="@string/dialog_opendate_estimate_date" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="35dp"
                android:background="#EFEFEF" />

            <RadioButton
                android:id="@+id/dialog_opendate_rb_changehouse"
                style="@style/dialog_opendata_item_style"
                android:text="@string/dialog_opendate_change_date" />

        </RadioGroup>
    </ScrollView>
</LinearLayout>